--- a/PongSolution/Pong/Pong.vcxproj
+++ b/PongSolution/Pong/Pong.vcxproj
@@ -135,6 +135,9 @@
   <ItemGroup>
     <ClCompile Include="Pong.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Bat.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
